k8s/apps/_retired/rclone-watch/records/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`rclone.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`rclone.starry.blue`) && PathPrefix(`/records`)
      services:
        - name: service
          port: 5572
      middlewares:
        - name: headers-rclone-watch-records

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-rclone-watch-records

spec:
  headers:
    customRequestHeaders:
      # intended; not insecure
      Authorization: Basic dXNlcjpwYXNz
